# dau-tones

./: .env.example  .gitattributes  .gitignore  .vercelignore  LICENSE  README.md  dev.sh  middleware.ts  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
api/: eval.py  index.py  pyproject.toml
api/data/: classifier_profile.json  demo_manifest.json  echo_scenes.json  echo_sentences.json  inventory.json
api/dau/: __init__.py  analysis_service.py  app.py  coach.py  content.py  echo.py  errors.py  guards.py  librosa_compat.py  models.py  realtime_audio.py  schemas.py  settings.py  spend.py  tones.py
api/scripts/: __init__.py  ai_admin.py  benchmark_llm.py  build_scene_assets.py  gen_art.py  gen_demo_fixtures.py  gen_echo_audio.py  gen_echo_demos.py  gen_targets.py  import_phone_targets.py  release_guards.py  render_profile_figure.py  retry_targets.py  validate_echo_course.py  validate_release.py
api/tests/: test_ai_admin.py  test_analysis_contract.py  test_app.py  test_benchmark_llm.py  test_coach.py  test_echo.py  test_eval.py  test_generation_scripts.py  test_guards.py  test_import_phone_targets.py  test_inventory.py  test_models.py  test_release_checks.py  test_tones.py
targets/: generation-report.json
targets/echo/: manifest.json
web/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/e2e/: offline-loop.spec.ts
web/src/: App.tsx  echo-scenes.css  fallbackData.test.ts  fallbackData.ts  main.tsx  styles.css  types.ts
web/src/lib/: api.ts  (+13 more)
(+37 files in other folders)
