[project]
name = "dau-api"
version = "0.1.0"
description = "Deterministic Vietnamese tone analysis and optional OpenAI coaching for Dấu"
requires-python = ">=3.11,<3.15"
dependencies = [
  "av>=14.4,<17",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "librosa>=0.11,<1",
  "numpy>=2.1,<3",
  "openai>=1.97,<3",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "python-dotenv>=1.1,<2",
  "python-multipart>=0.0.20,<1",
  "scipy>=1.14,<2",
  "soundfile>=0.13,<1",
  "uvicorn>=0.35,<1",
  "websockets>=15,<17",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dau"]

[dependency-groups]
dev = [
  "matplotlib>=3.10,<4",
  "mypy>=1.17,<2",
  "pillow>=11,<13",
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.1,<2",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.coverage.run]
branch = true
source = ["dau"]
